--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
     "@reduxjs/toolkit": "^1.3.5",
+    "@tissueswap/uikit": "^1.0.1",
     "@types/lodash.flatmap": "^4.5.6",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^14.14.16",
